feat(footer): add footer block
Added a footer block with core links and buttons.

--- a/index.html
+++ b/index.html
@@ -590,7 +590,245 @@
     </section>
   </main>
 
-  <footer></footer>
+  <!-- footer -->
+  <footer class="footer__info-block">
+    <section class="footer__info-boxa">
+
+      <div class="info-boxa__image-container1-block">
+
+        <div class="image-container1__block1">
+          <div class="image-container1__img-block image-container1__img-block1">
+            <img class="image-container1__img image-container1__img1"
+              src="assets/charma sitemap photos/638a4ae76d0f582a8fdbea60_CharmaLogo-dark.svg" alt="CharmaLogo dark">
+          </div>
+        </div>
+
+        <div class="image-container1__block2">
+          <div class="image-container1__img-block image-container1__img-block2">
+            <img class="image-container1__img image-container1__img2"
+              src="assets/charma sitemap photos/638a4ae76d0f582f58dbea61_top-post-badge 1.svg" alt="Product hunt logo">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="info-boxa__image-container2-block">
+
+        <div class="image-container2__block1">
+          <div class="image-container2__img-block">
+            <img class="image-container2__img"
+              src="assets/charma sitemap photos/651ea237142a6326a444fa2d_VirtualWorkspaces_MomentumLeader_Leader.png"
+              alt="Momentum Leader Fall logo">
+          </div>
+        </div>
+
+        <div class="image-container2__block2">
+          <div class="image-container2__img-block">
+            <img class="image-container2__img"
+              src="assets/charma sitemap photos/651ea242872a2c125a35966f_ObjectivesandKeyResults(OKR)_HighPerformer_Americas_HighPerformer.png"
+              alt="High Performer Americas logo">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="info-boxa__container3-block">
+        <div class="info-boxa__container3-social-block">
+
+          <a class="info-boxa__container3-social-link" href="#">
+            <img class="info-boxa__container3-social-icon" src="assets/charma sitemap photos/bxl-twitter.svg"
+              alt="Twitter icon">
+          </a>
+
+          <a class="info-boxa__container3-social-link" href="#">
+            <img class="info-boxa__container3-social-icon" src="assets/charma sitemap photos/bxl-linkedin.svg"
+              alt="Linkedin icon">
+          </a>
+
+
+          <a class="info-boxa__container3-social-link" href="#">
+            <img class="info-boxa__container3-social-icon" src="assets/charma sitemap photos/bxl-facebook-circle.svg"
+              alt="Facebook icon">
+          </a>
+
+        </div>
+
+        <div class="info-boxa__container3-info-block">
+          <p class="info-boxa__container3-info">
+            <a class="info-boxa__container3-info-link" href="#">Security</a>
+          </p>
+          <p class="info-boxa__container3-info">
+            <a class="info-boxa__container3-info-link" href="#">Privacy</a>
+          </p>
+          <p class="info-boxa__container3-info">
+            <a class="info-boxa__container3-info-link" href="#">Terms</a>
+          </p>
+        </div>
+
+        <div class="info-boxa__container3-rights-block">
+          <p class="info-boxa__container3-rights">
+            2023 RS Project. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer__info-boxb">
+      <div class="info-boxb__link-block">
+
+        <div class="info-boxb__link-box  info-boxb__link-box1">
+
+          <nav class="info-boxb__links">
+            <ul class="info-boxb__link-list">
+              <li class="info-boxb__link-item"><a class="info-boxb__link link-title" href="#">Product</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Meetings</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Feedback</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">360 Reviews</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Goals</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">CharmaAI</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">AgendaAI</a></li>
+            </ul>
+          </nav>
+
+        </div>
+
+        <div class="info-boxb__link-box  info-boxb__link-box2">
+          <nav class="info-boxb__links">
+            <ul class="info-boxb__link-list">
+              <li class="info-boxb__link-item"><a class="info-boxb__link link-title" href="#">Use Cases</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Managers</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Executives</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">HR teams</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="info-boxb__link-box  info-boxb__link-box3">
+
+          <nav class="info-boxb__links">
+            <ul class="info-boxb__link-list">
+              <li class="info-boxb__link-item"><a class="info-boxb__link link-title" href="#">Resources</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Articles</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Success stories</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Guides</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Pricing</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Support center</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Compare</a></li>
+            </ul>
+          </nav>
+
+        </div>
+
+        <div class="info-boxb__link-box  info-boxb__link-box4">
+
+          <nav class="info-boxb__links">
+            <ul class="info-boxb__link-list">
+              <li class="info-boxb__link-item"><a class="info-boxb__link link-title" href="#">About</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Contact us</a></li>
+            </ul>
+          </nav>
+
+        </div>
+
+        <div class="info-boxb__link-box  info-boxb__link-box5">
+
+          <nav class="info-boxb__links">
+            <ul class="info-boxb__link-list">
+              <li class="info-boxb__link-item"><a class="info-boxb__link link-title" href="#">Integrations</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Stack Integration</a></li>
+              <li class="info-boxb__link-item"><a class="info-boxb__link" href="#">Zoom app</a></li>
+            </ul>
+          </nav>
+        </div>
+
+      </div>
+
+      <nav>
+        <ul class="info-boxb__button-block">
+          <li class="info-boxb__button-item">
+            <a class="info-boxb__button-link" href="http://">
+              <div class="info-boxb__button">
+
+                <div class="info-boxb__button-icon-block">
+                  <img class="info-boxb__button-icon"
+                    src="assets/charma sitemap photos/651ea30c749c60cb41f0d5a9_Google_Chrome_icon_(February_2022).svg.webp"
+                    alt="Google Chrome icon">
+                </div>
+
+                <div class="info-boxb__button-text-block">
+                  <p class="info-boxb__button-text">
+                    Chrome extension
+                  </p>
+                </div>
+
+              </div>
+            </a>
+          </li>
+
+          <li class="info-boxb__button-item">
+            <a class="info-boxb__button-link" href="http://">
+              <div class="info-boxb__button">
+
+                <div class="info-boxb__button-icon-block">
+                  <img class="info-boxb__button-icon"
+                    src="assets/charma sitemap photos/651ea3ec530d0d90c5970e45_Slack_icon_2019.svg-p-1080.webp"
+                    alt="Slack icon">
+                </div>
+
+                <div class="info-boxb__button-text-block">
+                  <p class="info-boxb__button-text">
+                    Connect Slack
+                  </p>
+                </div>
+
+              </div>
+            </a>
+          </li>
+
+          <li class="info-boxb__button-item">
+            <a class="info-boxb__button-link" href="http://">
+              <div class="info-boxb__button">
+
+                <div class="info-boxb__button-icon-block">
+                  <img class="info-boxb__button-icon"
+                    src="assets/charma sitemap photos/651ea40e6b576bec45227394_Microsoft_Office_Teams_(2018–present).svg-p-500.webp"
+                    alt="Microsoft Office Teams icon">
+                </div>
+
+                <div class="info-boxb__button-text-block">
+                  <p class="info-boxb__button-text">
+                    Connect MS Teams
+                  </p>
+                </div>
+
+              </div>
+            </a>
+          </li>
+
+          <li class="info-boxb__button-item">
+            <a class="info-boxb__button-link" href="http://">
+              <div class="info-boxb__button">
+
+                <div class="info-boxb__button-icon-block">
+                  <img class="info-boxb__button-icon"
+                    src="assets/charma sitemap photos/651ea429e6755735067a37ce_ZM-b326e02f-p-1080.webp"
+                    alt="Zoom App icon">
+                </div>
+
+                <div class="info-boxb__button-text-block">
+                  <p class="info-boxb__button-text">
+                    Zoom App
+                  </p>
+                </div>
+
+              </div>
+            </a>
+          </li>
+
+        </ul>
+      </nav>
+    </section>
+  </footer>
 </body>
 
 </html>
