feat(message): add error message
Added an error message to instruct users to view the webpage on a larger
screen.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+  <!-- error message -->
+  <div class="error__message-text-block">
+    <p class="error__message-text">Sorry, for larger screens only.</p>
+  </div>
+
   <header class="header-block">
     <div class="header__logo-block">
       <img class="header__logo" src="assets/charma sitemap photos/638a4ae76d0f587399dbea49_CharmaLogo.svg"
